--- a/MediaSelector/src/main/res/drawable/media_selector_ic_checked.xml
+++ b/MediaSelector/src/main/res/drawable/media_selector_ic_checked.xml
@@ -1,10 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="?attr/colorPrimary"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M19,3L5,3c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM10.71,16.29c-0.39,0.39 -1.02,0.39 -1.41,0L5.71,12.7c-0.39,-0.39 -0.39,-1.02 0,-1.41 0.39,-0.39 1.02,-0.39 1.41,0L10,14.17l6.88,-6.88c0.39,-0.39 1.02,-0.39 1.41,0 0.39,0.39 0.39,1.02 0,1.41l-7.58,7.59z" />
+        android:pathData="M197.7,218h648.6v558.6h-648.6z"
+        android:strokeWidth="1" />
+    <path
+        android:fillColor="?attr/colorAccent"
+        android:pathData="m426,726l384,-384l-60,-62l-324,324l-152,-152l-60,60l212,214zM810,128q36,0 61,26t25,60l0,596q0,34 -25,60t-61,26l-596,0q-36,0 -61,-26t-25,-60l0,-596q0,-34 25,-60t61,-26l596,0z" />
 </vector>
