--- a/MediaSelector/src/main/res/drawable/media_selector_ic_play.xml
+++ b/MediaSelector/src/main/res/drawable/media_selector_ic_play.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="14dp"
     android:height="14dp"
-    android:tint="#CDFFFFFF"
+    android:tint="@android:color/white"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
