--- a/MediaSelector/src/main/res/layout/media_selector_activity_media_selector.xml
+++ b/MediaSelector/src/main/res/layout/media_selector_activity_media_selector.xml
@@ -17,17 +17,25 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             app:layout_constraintTop_toTopOf="parent"
-            app:title="MediaSelector" />
+            app:title=" " />
 
         <Button
-            android:id="@+id/media_selector_select_count_text_view"
+            android:id="@+id/media_selector_select_confirm_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignTop="@id/media_selector_tool_bar"
+            android:layout_alignBottom="@id/media_selector_tool_bar"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/media_selector_confirm_button_selector"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:stateListAnimator="@null"
             android:textColor="@android:color/black"
-            android:textSize="14sp"
-            tools:text="Confirm(3/9)" />
+            android:textSize="14sp" />
 
     </RelativeLayout>
 
@@ -38,12 +46,5 @@
         android:layout_below="@id/media_selector_tool_bar_layout"
         app:layout_constraintTop_toBottomOf="@id/media_selector_tool_bar_layout" />
 
-    <Button
-        android:id="@+id/media_selector_confirm_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="get"
-        app:layout_constraintBottom_toBottomOf="parent" />
 
 </RelativeLayout>
