--- a/MediaSelector/src/main/res/values/colors.xml
+++ b/MediaSelector/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="media_selector_color_primary">#fff</color>
+    <color name="media_selector_color_primary">#2196F3</color>
     <color name="media_selector_color_primary_variant">#fff</color>
     <color name="media_selector_color_on_primary">#fff</color>
 
