--- a/MediaSelector/src/main/res/layout/media_selector_activity_media_selector.xml
+++ b/MediaSelector/src/main/res/layout/media_selector_activity_media_selector.xml
@@ -15,9 +15,10 @@
             android:id="@+id/media_selector_tool_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@color/media_selector_toolbar_background_color"
             app:layout_constraintTop_toTopOf="parent"
-            app:title=" " />
+            app:title=" "
+            app:titleTextColor="@color/media_selector_toolbar_text_color" />
 
         <Button
             android:id="@+id/media_selector_select_confirm_button"
@@ -34,7 +35,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:stateListAnimator="@null"
-            android:textColor="@android:color/black"
+            android:textColor="@color/media_selector_toolbar_text_color"
             android:textSize="14sp" />
 
     </RelativeLayout>
@@ -44,6 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/media_selector_tool_bar_layout"
+        android:background="@color/media_selector_content_background_color"
         app:layout_constraintTop_toBottomOf="@id/media_selector_tool_bar_layout" />
 
 
