--- a/MediaSelector/src/main/res/values/colors.xml
+++ b/MediaSelector/src/main/res/values/colors.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="media_selector_color_primary">#2196F3</color>
-    <color name="media_selector_color_primary_variant">#fff</color>
-    <color name="media_selector_color_on_primary">#fff</color>
-
+    <color name="media_selector_checkbox_color">#2196F3</color>
+    <color name="media_selector_toolbar_background_color">#fff</color>
+    <color name="media_selector_toolbar_text_color">#000</color>
+    <color name="media_selector_content_background_color">#fff</color>
     <color name="media_selector_mask_color">#32000000</color>
-
 </resources>
