--- a/MediaSelector/src/main/res/values/themes.xml
+++ b/MediaSelector/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
 <resources>
 
     <style name="Theme.MediaSelectorActivity" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/media_selector_color_primary</item>
-        <item name="colorPrimaryVariant">@color/media_selector_color_primary_variant</item>
-        <item name="colorOnPrimary">@color/media_selector_color_on_primary</item>
-
+        <item name="colorPrimary">@color/media_selector_toolbar_background_color</item>
+        <item name="colorPrimaryVariant">@color/media_selector_toolbar_background_color</item>
+        <item name="colorOnPrimary">@color/media_selector_toolbar_background_color</item>
+        <item name="colorControlNormal">@color/media_selector_toolbar_text_color</item>
         <!-- Status bar color. -->
         <item name="android:windowLightStatusBar">true</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/media_selector_toolbar_background_color</item>
         <!-- Customize your theme here. -->
     </style>
 
