--- a/MediaSelector/src/main/res/layout/media_selector_fragment_preview_video.xml
+++ b/MediaSelector/src/main/res/layout/media_selector_fragment_preview_video.xml
@@ -1,80 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:clickable="true"
-    tools:context=".MediaSelectorActivity">
+    android:clickable="true">
 
-    <RelativeLayout
-        android:id="@+id/media_selector_tool_bar_layout"
+    <VideoView
+        android:id="@+id/media_selector_video_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/media_selector_tool_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/media_selector_toolbar_background_color"
-            app:layout_constraintTop_toTopOf="parent"
-            app:title=" "
-            app:titleTextColor="@color/media_selector_toolbar_text_color" />
-
-        <Button
-            android:id="@+id/media_selector_select_confirm_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/media_selector_tool_bar"
-            android:layout_alignBottom="@id/media_selector_tool_bar"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/media_selector_confirm_button_selector"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:stateListAnimator="@null"
-            android:textColor="@color/media_selector_toolbar_text_color"
-            android:textSize="14sp" />
-
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
     <RelativeLayout
-        android:id="@+id/media_selector_video_container"
+        android:id="@+id/media_selector_video_cover_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/media_selector_tool_bar_layout">
+        android:layout_alignTop="@id/media_selector_video_view"
+        android:layout_alignBottom="@id/media_selector_video_view">
 
-        <VideoView
-            android:id="@+id/media_selector_video_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
-
-        <RelativeLayout
-            android:id="@+id/media_selector_video_cover_container"
+        <ImageView
+            android:id="@+id/media_selector_video_cover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignTop="@id/media_selector_video_view"
-            android:layout_alignBottom="@id/media_selector_video_view">
+            android:scaleType="fitXY" />
 
-            <ImageView
-                android:id="@+id/media_selector_video_cover"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY" />
-
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_centerInParent="true"
-                android:alpha="0.8"
-                android:src="@drawable/media_selector_ic_play" />
-        </RelativeLayout>
-
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerInParent="true"
+            android:alpha="0.8"
+            android:src="@drawable/media_selector_ic_play" />
     </RelativeLayout>
 
 
