--- a/MediaSelector/src/main/res/layout/media_selector_activity_preview.xml
+++ b/MediaSelector/src/main/res/layout/media_selector_activity_preview.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:clickable="true"
-    tools:context=".MediaSelectorActivity">
+    tools:context=".MediaSelectorListActivity">
 
     <RelativeLayout
         android:id="@+id/media_selector_tool_bar_layout"
@@ -22,23 +22,14 @@
             app:title=" "
             app:titleTextColor="@color/media_selector_toolbar_text_color" />
 
-        <Button
-            android:id="@+id/media_selector_select_confirm_button"
+        <TextView
+            android:id="@+id/media_selector_indicator"
             android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/media_selector_tool_bar"
-            android:layout_alignBottom="@id/media_selector_tool_bar"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/media_selector_confirm_button_selector"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:stateListAnimator="@null"
-            android:textColor="@color/media_selector_toolbar_text_color"
-            android:textSize="14sp" />
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
 
     </RelativeLayout>
 
