--- a/MediaSelector/src/main/res/layout/media_selector_activity_preview.xml
+++ b/MediaSelector/src/main/res/layout/media_selector_activity_preview.xml
@@ -25,11 +25,46 @@
         <TextView
             android:id="@+id/media_selector_indicator"
             android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
+        <LinearLayout
+            android:id="@+id/media_selector_preview_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/media_selector_tool_bar"
+            android:layout_alignBottom="@id/media_selector_tool_bar"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/media_selector_confirm_button_selector"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp">
+
+            <TextView
+                android:id="@+id/media_selector_check_text"
+                android:layout_width="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="3dp"
+                android:text="@string/media_selector_select_button"
+                android:textColor="@color/media_selector_toolbar_text_color"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/media_selector_check_box"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:padding="2dp"
+                android:src="@drawable/media_selector_check_box_selector_black" />
+        </LinearLayout>
 
     </RelativeLayout>
 
