--- a/MediaSelector/src/main/res/layout/media_selector_activity_media_list.xml
+++ b/MediaSelector/src/main/res/layout/media_selector_activity_media_list.xml
@@ -21,7 +21,7 @@
             app:title=" "
             app:titleTextColor="@color/media_selector_toolbar_text_color" />
 
-        <Button
+        <TextView
             android:id="@+id/media_selector_select_confirm_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,11 +33,13 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/media_selector_confirm_button_selector"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:stateListAnimator="@null"
+            android:gravity="center"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:textColor="@color/media_selector_toolbar_text_color"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:textStyle="bold"
+            tools:text="@string/media_selector_confirm_button_pattern" />
 
     </RelativeLayout>
 
