--- a/MediaSelector/src/main/res/layout/media_selector_item_media.xml
+++ b/MediaSelector/src/main/res/layout/media_selector_item_media.xml
@@ -44,6 +44,7 @@
         android:layout_height="26dp"
         android:layout_alignEnd="@id/media_selector_iv_cover"
         android:layout_alignBottom="@id/media_selector_iv_cover"
+        android:focusable="false"
         android:padding="2dp"
         android:src="@drawable/media_selector_check_box_selector" />
 
