--- a/MediaSelector/src/main/res/layout/media_selector_activity_media_list.xml
+++ b/MediaSelector/src/main/res/layout/media_selector_activity_media_list.xml
@@ -18,10 +18,11 @@
             android:layout_height="wrap_content"
             android:background="@color/media_selector_toolbar_background_color"
             app:layout_constraintTop_toTopOf="parent"
-            app:title=" "
+            app:title="@string/media_selector_select_background"
             app:titleTextColor="@color/media_selector_text_color" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/media_selector_select_confirm_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
