--- a/MediaSelector/src/main/res/values/themes.xml
+++ b/MediaSelector/src/main/res/values/themes.xml
@@ -7,8 +7,13 @@
         <item name="colorOnPrimary">@color/media_selector_toolbar_background_color</item>
         <item name="colorControlNormal">@color/media_selector_text_color</item>
         <!-- Status bar color. -->
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:fontFamily">@font/sfuitext_regular</item>
         <item name="android:statusBarColor">@color/media_selector_toolbar_background_color</item>
+        <item name="android:navigationBarColor">@android:color/black</item>
+        <item name="colorAccent">@android:color/black</item>
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="colorPrimaryDark">@android:color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
     </style>
 
